--- a/force-app/main/default/aura/anyLocalAction/anyLocalAction.cmp
+++ b/force-app/main/default/aura/anyLocalAction/anyLocalAction.cmp
@@ -19,6 +19,12 @@
     description="The output from the action"
   />
   <aura:attribute
+    name="showErrorToast"
+    type="boolean"
+    access="public"
+    description="Check to show a toast to the user on error"
+  />
+  <aura:attribute
     name="outputArray"
     type="string[]"
     access="public"
